SBVTestSuite/TestSuite/CompileTests/PCase/PCase38.stderr
PCase38.hs:(12,14)-(18,8): Splicing expression
    ghc-internal:GHC.Internal.TH.Quote.quoteExp
      pCase
      " e of\n\
      \        Zero      -> undefined\n\
      \        Num _     -> undefined\n\
      \        Var _     -> undefined\n\
      \        Add _ _   -> undefined\n\
      \        Let _ _ _ -> undefined\n\
      \      "
  ======>
    cases
      [(isZero e ==> undefined), (isNum e ==> undefined),
       (isVar e ==> undefined), (isAdd e ==> undefined),
       (isLet e ==> undefined)]
PCase38.hs:12:14: error: [GHC-83865]
    " Couldn't match expected type: Proof SBool
                  with actual type: sbv-14.0:Data.SBV.TP.TP.TPProofGen
                                      a0 [sbv-14.0:Data.SBV.TP.TP.Helper] ()
    " In the expression:
        cases
          [(isZero e ==> undefined), (isNum e ==> undefined),
           (isVar e ==> undefined), ....]
      In an equation for t:
          t e
            = (cases
                 [(isZero e ==> undefined), (isNum e ==> undefined),
                  (isVar e ==> undefined), ....])
   |
12 | t e = [pCase| e of
   |              ^^^^^...

